update semantics and styles

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -5,17 +5,15 @@
     subheader="Bio and contact information">
   </app-article-header>
 
-  <div class="about-main">
+  <section class="about-main">
 
     <div class="secondary-content">
       <img
         class="self-image"
         src="../assets/images/about/self-image.jpg"
         alt="peter-cutler">
-
       <div class="contact-group">
         <h2 class="contact-heading">Contact</h2>
-
         <div class="contact-row">
           <a
             class="contact-link"
@@ -24,14 +22,12 @@
             Email
           </a>
         </div>
-
         <div class="contact-row">
           <a
             class="contact-link"
             target="_blank"
             href="https://twitter.com/petergcutler">Twitter</a>
         </div>
-
         <div class="contact-row">
           <a
             class="contact-link"
@@ -43,14 +39,12 @@
 
     <div class="primary-content">
       <div class="bio">
-
         <p>
           Hey, I'm Peter Cutler, and I'm a Master's student living in Seattle.
           I'm currently studying <a target="_blank" class="about-body-link" href="https://www.hcde.washington.edu/ms/">
           Human Centered Design & Engineering</a> at the University of
           Washington.
         </p>
-
         <p>
           I've worked in different tech roles for the past seven years, doing
           things like writing, strategy, ux, design, and software engineering
@@ -58,11 +52,9 @@
           You can find some of my work here</a>. Take a look and feel free to
           reach out.
         </p>
-
       </div>
     </div>
-
-  </div>
+  </section>
 
   <app-article-footer></app-article-footer>
 </article>
