--- a/src/app/work/work-details/work-details.component.html
+++ b/src/app/work/work-details/work-details.component.html
@@ -1,4 +1,4 @@
-<article class="work-details">
+<section class="work-details">
   <header class="subject-header">
     <div class="heading">
       Work
@@ -14,4 +14,4 @@
   <router-outlet></router-outlet>
 
   <app-article-footer [imageCredit]="work.imageCredit" ></app-article-footer>
-</article>
+</section>
