--- a/src/app/work/work-items/crowdskout-form-editor/crowdskout-form-editor.component.html
+++ b/src/app/work/work-items/crowdskout-form-editor/crowdskout-form-editor.component.html
@@ -1,40 +1,34 @@
-<div class="work-entry">
-  <div class="work-intro">
-    <div class="work-header">
+<article class="work-entry">
+
+  <header class="work-header">
+    <section class="work-titling">
       <h1 class="work-title">
         A System for Interactive Forms
       </h1>
-
       <div class="work-title-border"></div>
-
       <div class="work-subtitle">
         Enabling users to create, manage, and interpret data from surveys & forms using a variety of designs and conditions
       </div>
-    </div>
-
+    </section>
     <ul class="work-tags">
       <li class="work-tag">Front-End Engineering</li>
       <li class="work-tag">JavaScript</li>
       <li class="work-tag">AngularJS</li>
     </ul>
-
     <div class="work-description">
       <p>
         One way that Crowdskout users can interact with their profiles is to deliver rich surveys and forms for a variety of circumstances. I overhauled the form system in 2015 and 2016, and added a system for conditionally branching questions to facilitate rich survey creation.
       </p>
     </div>
+  </header>
 
-  </div>
-  <div class="work-body">
-
+  <section class="work-section">
     <h2 class="work-body-h2">
       Profile Fields Tied to Custom Questions
     </h2>
-
     <p>
       A Crowdskout user may use forms to ask any number of questions. These questions in turn can fuel the creating or updating of any of the hundreds of Crowdskout profile fields that exist in their database.
     </p>
-
     <div class="work-body-image-grid">
       <app-image-viewer
         path="../assets/images/work/crowdskout-form-editor/form-editor-1a.png"
@@ -47,11 +41,9 @@
         borderOn="true">
       </app-image-viewer>
     </div>
-
     <p>
       Crowdskout's form editor component is a complex, interactive module within the application. If you have any questions, I'm happy to walk through the design and code involved. Thanks for reading.
     </p>
+  </section>
 
-  </div>
-
-</div>
+</article>
