--- a/src/app/work/work-items/uw-oculus-onboarding/uw-oculus-onboarding.component.html
+++ b/src/app/work/work-items/uw-oculus-onboarding/uw-oculus-onboarding.component.html
@@ -1,17 +1,15 @@
-<div class="work-entry">
-  <div class="work-intro">
-    <div class="work-header">
+<article class="work-entry">
+
+  <header class="work-header">
+    <section class="work-titling">
       <h1 class="work-title">
         On-boarding with the Oculus Platform
       </h1>
-
       <div class="work-title-border"></div>
-
       <div class="work-subtitle">
         Conducting a usability test to evaluate first-time user experiences with Oculus Touch and motion-controlled software
       </div>
-    </div>
-
+    </section>
     <ul class="work-tags">
       <li class="work-tag">UX Research</li>
       <li class="work-tag">Research Planning</li>
@@ -19,7 +17,6 @@
       <li class="work-tag">Qualitative Research</li>
       <li class="work-tag">Quantitative Research</li>
     </ul>
-
     <div class="work-description">
       <p>
         In January 2018, I formed a group with three other graduate students to develop and conduct a usability test. We were interested in testing a product with a complex, novel interface &mdash; something that presented different questions and opportunities than traditional web applications.
@@ -28,18 +25,15 @@
         We decided to work with VR, using the Oculus platform. We were interested in understanding how first-time users would grapple with this new interface &mdash; what hurdles they would identify during on-boarding, and how they would adapt and operate a software interface with no prior experience.
       </p>
     </div>
+  </header>
 
-  </div>
-  <div class="work-body">
-
+  <section class="work-section">
     <h2 class="work-body-h2">
       VR Applications
     </h2>
-
     <p>
       At the outset of the project, we decided to focus on two Oculus applications:
     </p>
-
     <ul class="work-body-list">
       <li>
         <a class="work-body-link" target="_blank" href="https://www.tiltbrush.com/">
@@ -50,11 +44,9 @@
           Tilt Brush</a> &mdash; a 3d design application designed for VR
       </li>
     </ul>
-
     <p>
       Why these applications? First, we wanted to test an interface-driven product, rather than a game. I had purchased the Rift when it launched and had seen how 3d design applications were taking advantage of the VR medium. As a team, we explored Tilt Brush together and decided it was a great candidate.
     </p>
-
     <div class="work-body-image-grid">
       <app-image-viewer
         path="../assets/images/work/uw-oculus-onboarding/first-contact.jpg"
@@ -65,23 +57,21 @@
         description="Tilt Brush by Google">
       </app-image-viewer>
     </div>
-
     <p>
       We also determined that we couldn't drop users into a complex application like Tilt Brush without on-boarding. As we used First Contact, we found we were interested in understanding users' reception and comprehension of the application.
     </p>
-
     <p>
       On the one hand, it's a very game-like experience, but on the other, it's responsible for imparting foundational context and direction to the user. We wanted to explore how the user perceived this experience, and how well it taught them.
     </p>
+  </section>
 
+  <section class="work-section">
     <h2 class="work-body-h2">
       Heuristic Evaluation
     </h2>
-
     <p>
       Without stakeholders to dictate our direction, we used a <a class="work-body-link" target="_blank" href="https://www.nngroup.com/articles/ten-usability-heuristics/">heuristic analysis</a> of our applications to find worthwhile avenues to explore. Based on our evaluation, we found a wide array of possible problems to explore. We focused on a few at the outset:
     </p>
-
     <ul class="work-body-list">
       <li>
         <span class="bold">Visibility of System Status</span>: in First Contact, we found some of us were confused about what we should be doing. In Tilt Brush, we found a lack of clarity around our current tool selections.
@@ -99,19 +89,18 @@
         <span class="bold">Help and Documentation</span>: we found poor access to documentation within Tilt Brush.
       </li>
     </ul>
+  </section>
 
+  <section class="work-section">
     <h2 class="work-body-h2">
       Research Planning
     </h2>
-
     <p>
       Our next task was to use our findings from discovery to develop a concrete, clearly-scoped research plan.
     </p>
-
     <p>
       We prioritized problems that were foundational, rather than those that could be attributed to "figuring out" emerging issues in VR. At this time, it's unrealistic that VR apps present a common, synchronous interface, for instance. We focused on education and on-boarding problems, and organized the following research questions:
     </p>
-
     <ul class="work-body-list">
       <li>
         What challenges do first-time users run into while using the Oculus platform?
@@ -123,15 +112,12 @@
         How easily and successfully do first-time users interact with First Contact and Tilt Brush?
       </li>
     </ul>
-
     <h3 class="work-body-h3">
       Components of the Research Plan
     </h3>
-
     <p>
       We developed our research plan to outline how we would evaluate these questions. The plan included all of the necessary operational information.
     </p>
-
     <ul class="work-body-list">
       <li>
         Target users, with inclusion and exclusion criteria
@@ -152,19 +138,18 @@
         Results, reporting, deliverables, and timeline
       </li>
     </ul>
-
     <p>
       Based on our plan, we began to recruit and screen our participants. To do so we tapped our social networks and created an online screener survey. Meanwhile, we also prepared our session script, data collection documents, and other logistical docs.
     </p>
+  </section>
 
+  <section class="work-section">
     <h2 class="work-body-h2">
       Running the Usability Study
     </h2>
-
     <p>
       We brought 8 individuals to Facebook's offices for our study. Each of us moderated two, one-hour sessions with participants.
     </p>
-
     <div class="work-body-image-grid">
       <app-image-viewer
         path="../assets/images/work/uw-oculus-onboarding/moderation-3a.png"
@@ -175,11 +160,9 @@
         description="Moderating with Tilt Brush">
       </app-image-viewer>
     </div>
-
     <p>
       We each navigated many of the unique hurdles to testing in VR:
     </p>
-
     <ul class="work-body-list">
       <li>
         Ensuring participants were comfortable among strangers, while blind to their surroundings
@@ -191,36 +174,34 @@
         Exposing participants to a completely foreign interface, and persistently encouraging and exploring Think-Aloud dialogue
       </li>
     </ul>
-
     <p>
       We also conducted the interviews outlined in our research plan -- pre and post-test, as well as post-task and post-application interviews. During our team-mates' sessions, we aided in note-taking, chaperoning participants with the equipment, noting quantitative success/failure, and asking select follow-up questions during interviews.
     </p>
+  </section>
 
+  <section class="work-section">
     <h2 class="work-body-h2">
       Analysis and Organizing Findings
     </h2>
-
     <p>
       We began to analyze our findings after testing our first participant. Typically, we would each note our own findings, and then begin to compare after reflecting independently. By the time we completed our eighth and final test, we had a growing body of findings, and were approaching consensus among the most severe issues.
     </p>
-
     <app-image-viewer
       path="../assets/images/work/uw-oculus-onboarding/team-oasis-at-work.png"
       description="Our team, in a not-at-all-staged photograph">
     </app-image-viewer>
-
     <p>
       We met a number of times following the study to prioritize our findings, put together affinity diagrams, and draft out our presentation and report.
     </p>
+  </section>
 
+  <section class="work-section">
     <h2 class="work-body-h2">
       Presenting and Reporting Out
     </h2>
-
     <p>
       To get a full look at our findings, you can review <a class="work-body-link" target="_blank" href="https://www.dropbox.com/s/j8jxp2u9y2738py/ProjectOasis-OculusRift-3-6-final.pdf?dl=0">our presentation</a> and <a class="work-body-link" target="_blank" href="https://www.dropbox.com/s/1dn8c7vbxu422ew/Oasis-Report.pdf?dl=0">our final report</a>.
     </p>
-
     <figure class="work-body-figure">
       <a target="_blank" href="https://www.dropbox.com/s/j8jxp2u9y2738py/ProjectOasis-OculusRift-3-6-final.pdf?dl=0">
         <img
@@ -232,15 +213,12 @@
         Our presentation was limited to 15 minutes, but detailed the project and our most salient findings
       </figcaption>
     </figure>
-
     <p>
       This is a detailed report, and I'd be happy to answer any questions about it. We uncovered many actionable findings across both First Contact and Tilt Brush.
     </p>
-
     <p>
       For me personally, I've enjoyed working with VR for many years, and the process of conducting this research only made me more certain about the exciting questions we can continue to explore in this interactive frontier.
     </p>
+  </section>
 
-  </div>
-
-</div>
+</article>
