--- a/src/app/work/work-items/uw-secure-storage/uw-secure-storage.component.html
+++ b/src/app/work/work-items/uw-secure-storage/uw-secure-storage.component.html
@@ -1,17 +1,15 @@
-<div class="work-entry">
-  <div class="work-intro">
-    <div class="work-header">
+<article class="work-entry">
+
+  <header class="work-header">
+    <section class="work-titling">
       <h1 class="work-title">
         Secure Storage for Tent Cities
       </h1>
-
       <div class="work-title-border"></div>
-
       <div class="work-subtitle">
         Designing a user-centered solution to help homeless Seattle residents store their possessions securely and sustainably
       </div>
-    </div>
-
+    </section>
     <ul class="work-tags">
       <li class="work-tag">UX Research</li>
       <li class="work-tag">Research Planning</li>
@@ -19,114 +17,99 @@
       <li class="work-tag">Wireframing</li>
       <li class="work-tag">Prototyping</li>
     </ul>
-
     <div class="work-description">
-      <p>
-        In September 2017, I formed a group with three other graduate students to find a problem and design a user-centered solution. We were all motivated to work on a project that was socially-responsible, topical, and relevant to our local region.
+      <!-- <p>
+        In September 2017, I formed a group with three other graduate students to design a user-centered solution to address problems for homeless residents of Seattle.
       </p>
       <p>
-        We decided to work on an issue that impacts thousands of Seattle's citizens: design a user-centered solution to help homeless Seattle residents store their possessions securely and sustainably.
-      </p>
+        My role spanned lorem ipsum dolor sit amet.
+      </p> -->
     </div>
+  </header>
 
-  </div>
-  <div class="work-body">
-
+  <section class="work-section">
     <h2 class="work-body-h2">
       Opportunity Space and Scope
     </h2>
-
     <p>
-      At the outset of the project, our opportunity space was broad: we wanted to look at problems for homelessness residents of Seattle. In order to find the right issue to examine, we began a literature review and reached out to experts for interviews. Some of our findings at this time included:
+      Our opportunity space was initialy broad: we wanted to look at problems for homelessness residents of Seattle. In order to narrow our scope, we began a literature review and reached out to experts for interviews.
     </p>
-
     <ul class="work-body-list">
       <li>
-        We each combed dozens of in-depth investigative reports. We created <a class="work-body-link" target="_blank" href="https://www.evernote.com/shard/s55/sh/399d9d7c-0076-4bc3-8724-f5059f4f0e54/75be081166e1709a">many notes like this one</a>, aggregating and highlighting opportunities that we could further investigate.
+        We read dozens of investigative reports and created <a class="work-body-link" target="_blank" href="https://www.evernote.com/shard/s55/sh/399d9d7c-0076-4bc3-8724-f5059f4f0e54/75be081166e1709a">notes like this one</a>, organizing opportunities that we could further investigate.
       </li>
       <li>
-        We found many experts willing to speak with us. I began a conversation with <a class="work-body-link" target="_blank" href="https://en.wikipedia.org/wiki/Barbara_Poppe">Barbara Poppe</a>, an appointee by President Obama to the U.S. Interagency Council on Homelessness. She helped validate and confirm our trajectory early on in the project.
+        We reached out to experts. I began a conversation with <a class="work-body-link" target="_blank" href="https://en.wikipedia.org/wiki/Barbara_Poppe">Barbara Poppe</a>, an Obama appointee to the U.S. Interagency Council on Homelessness. She helped validate our initial trajectory.
       </li>
       <li>
-        With such an open ended challenge ahead, our lit review and semi-structured interviews helped us understand how a narrow scope could help us achieve tangible results.
+        Our lit review and semi-structured interviews helped us understand how a narrow scope could help us achieve tangible results.
       </li>
     </ul>
+  </section>
 
+  <section class="work-section">
+    <h3 class="work-body-h3">
+      Why focus on storage solutions?
+    </h3>
     <p>
-      As our group reviewed our findings and interviews, we decided to focus on designing sustainable storage solutions for Seattle's homeless populations. We chose this opportunity space because it was small enough in scope for us to explore, but large enough that it could provide benefits and peace of mind to many users:
+      We decided to focus on designing storage solutions because this space was small enough in scope for us to explore, but large enough that it could provide real benefits to many users:
     </p>
-
     <ul class="work-body-list">
-      <li>With their possessions safe, users can travel more freely</li>
-      <li>Meet about social services with social workers and others</li>
-      <li>Travel to explore employment opportunities</li>
-      <li>Focus on ongoing tasks without worrying about loss prevention</li>
+      <li>With their possessions safe, shelter residents could travel more freely without worrying about loss prevention</li>
+      <li>This would offer many practical and emotional benefits, and enable easier access to social services and employment opportunities</li>
     </ul>
+  </section>
 
+  <section class="work-section">
     <h2 class="work-body-h2">
       Understanding the Domain
     </h2>
-
     <p>
-      With a narrower focus in mind, our research continued &mdash; we would need to understand this complex system better in order to know our constraints and opportunities. We first sought to understand what audiences were involved, and what stakeholder objectives would define a viable solution.
+      To better understand our place in this domain, we first sought to define what audiences were involved and what resource constraints we would face.
     </p>
-
     <h3 class="work-body-h3">
       Types of Homeless Housing Projects
     </h3>
-
     <p>
-      Seattle presents many distinct populations of homeless residents who are relying on a variety of housing programs for support.
+      Seattle presents many distinct populations of homeless residents who are relying on a variety of housing programs for support. These housing programs differ across the types of shelter, staff support, amenities, and other factors of care provided. A single solution may not work for each type of shelter.
     </p>
-
     <app-image-viewer
       path="../assets/images/work/uw-secure-storage/homeless-housing-programs.png"
       description="The four types of homeless housing programs in Seattle"
       [borderOn]="true">
     </app-image-viewer>
-
-    <p>
-      These housing programs differ across the types of shelter, staff support, amenities, and other factors of care provided. Understanding this complex network of housing programs was a critical first step to designing a viable solution.
-    </p>
-
     <h3 class="work-body-h3">
       Financial Resources Available
     </h3>
-
     <p>
-      Beyond existing housing programs, we also wanted to understand the financial resources that the city puts towards homelessness. We investigated how budgetary resources are organized in Seattle.
+      Beyond existing housing programs, we also wanted to understand the financial resources that the city puts towards homelessness. We investigated how budgetary resources are organized in Seattle. The resources here, like in many cities, are scarce.
     </p>
-
     <app-image-viewer
       path="../assets/images/work/uw-secure-storage/homelessness-budgets.jpeg"
       description="The homelessness spending budget in Seattle"
       [borderOn]="true">
     </app-image-viewer>
+  </section>
 
-    <p>
-      The resources here, like in many cities, are scarce. But understanding the financial context was critical to designing a realistic solution.
-    </p>
-
+  <section class="work-section">
     <h3 class="work-body-h3">
-      A Philosophy of Housing First
+      Putting Housing First
     </h3>
-
     <p>
       Through literature review and semi-structured interviews, we came to align ourselves with a budgetary concept of <a class="work-body-link" target="_blank" href="https://www.desc.org/what-we-do/housing/housing-first/">housing first</a> &mdash; the idea that the overwhelming majority of city funds should be put towards the creation of permanent housing solutions rather than stop-gap measures.
     </p>
-
     <p>
       As we progressed, we often asked ourselves, "is this solution worth more than a single permanent home?" Prioritizing "housing first," we knew our solution would have to use resources responsibly &mdash; either through a low cost or through an easy method of scaling the resources required.
     </p>
+  </section>
 
+  <section class="work-section">
     <h2 class="work-body-h2">
-      Conducting a Competitive Analysis
+      Competitive Analysis
     </h2>
-
     <p>
-      As we researched existing solutions across the domain, we found that most of the designed solutions didn't account for the wide variety of housing programs that exist. Existing solutions also frequently employed costly materials or failed to align with the resource scarcity of the system.
+      We found that many existing solutions didn't account for the range of housing programs that exist. They frequently employed costly materials or failed to align with the resource scarcity of the system.
     </p>
-
     <div class="work-body-image-grid">
       <app-image-viewer
         path="../assets/images/work/uw-secure-storage/hope-lockers.png"
@@ -137,64 +120,60 @@
         description="One of the lockers from Denver's program">
       </app-image-viewer>
     </div>
-
     <p>
-      The H.O.P.E. lockers, shown above, cost $10,000 to build. The funds were raised through an indiegogo campaign. Another storage pilot program in Denver, shown below, cost $100,000 to initiate, and included a high upkeep cost each month onward.
+      The H.O.P.E. lockers, shown above, cost $10,000 each to build. Another storage pilot program in Denver, shown below, cost $100,000 to initiate, and included a high upkeep cost each month onward.
     </p>
-
     <p>
       Based on the narrow scope of existing solutions, we saw an opportunity for a cheaper, more sustainable, community-oriented system.
     </p>
+  </section>
 
+  <section class="work-section">
     <h2 class="work-body-h2">
       Surveying Shelter Residents
     </h2>
-
     <p>
-      In order to build an understanding of our potential design's users, we began planning outreach to residents of local shelters. We crafted two surveys &mdash; one for shelter administrators and one for shelter residents &mdash; to get a sense of a variety of stakeholders for a storage-oriented project. Some of our questions for stakeholders included:
+      We crafted two surveys &mdash; one for shelter administrators and one for shelter residents &mdash; to get perspectives from the key stakeholders for a storage-oriented project.
     </p>
-
+    <p>
+      Some of our questions for stakeholders included:
+    </p>
     <ul class="work-body-list">
       <li>How long do residents leave belongings unattended?</li>
       <li>How do you ensure security?</li>
       <li>How do you manage access?</li>
       <li>How much space is available at your shelter for storage?</li>
     </ul>
-
     <p>
       And for residents:
     </p>
-
     <ul class="work-body-list">
       <li>Do you co-habitate with others?</li>
       <li>Would you be comfortable sharing storage with your group?</li>
       <li>Are you comfortable having fellow community members watch over lockers?</li>
       <li>What storage size do you require?</li>
     </ul>
-
     <p>
       In addition to the above questions, we also asked a number of questions about the level of trust within the community, the logistics and operations, and how communication is handled between residents in different scenarios.
     </p>
+  </section>
 
+  <section class="work-section">
     <h2 class="work-body-h2">
       Visiting and Interviewing
     </h2>
-
     <p>
-      Our group had a particular interest in Seattle's tent cities. These communities in particular are transitional, highly vulnerable, and were heavily publicized during the mayoral elections. To gain an understanding of the needs of residents of transitional housing, we visited Nickelsville Ballard to tour and interview.
+      Our group had a particular interest in Seattle's tent cities. These communities are transitional, highly vulnerable, and have been contentious in Seattle housing discussions. To gain an understanding of the needs of residents of transitional housing, we visited Nickelsville Ballard to transect-walk and interview.
     </p>
-
     <app-image-viewer
       [images]="nickelsvilleImages"
       path="../assets/images/work/uw-secure-storage/nickelsville-1a.png"
       description="Gallery of Nickelsville Ballard"
       [borderOn]="true">
     </app-image-viewer>
-
     <p>
-      Our guide, Jamie, gave us a tour and answered our questions in an interview. From our interview with Jamie, we gained a much deeper understanding of the relationship residents have with their belongings and storage. Some of our takeaways included:
+      Our guide gave us a tour and joined us in an interview. We gained a much deeper understanding of the relationship residents have with their belongings and storage. Some of our takeaways included:
     </p>
-
     <ul class="work-body-list">
       <li>
         Residents have significant needs for privacy, which extends to their storage.
@@ -203,29 +182,27 @@
         Transitional communities must be able to move on short notice due to raids or other relocation needs. Residents must be able to bring both their goods and the means to store them.
       </li>
       <li>
-        Jamie reiterated what our surveys found &mdash; residents have a lot of possessions, often over 500 or 1000 liters.
+        Our guide reiterated what our surveys found &mdash; residents have a lot of possessions, often over 500 or 1000 liters.
       </li>
       <li>
         There is often room for more storage, but no structure to house goods.
       </li>
     </ul>
-
     <h3 class="work-body-h3">
       Early Design Ideas from the Field
     </h3>
-
     <p>
       One of my design ideas came from this field visit &mdash; from seeing the kind of structural supports depicted in the last three picture above. Many of the structures in the Nickelsville Ballard camp were fabricated from a mix of skeletal supports (the kind of plastic, PVC type material shown), and a simple waterproof exoskeleton, like a standard tarp. I knew I wanted to explore this kind of structural, component-based system more.
     </p>
+  </section>
 
+  <section class="work-section">
     <h2 class="work-body-h2">
       Synthesizing Personas and Early Design
     </h2>
-
     <p>
-      Looking at our findings from the field visit and from our survey responses, we created a set of personas to represent the most common findings from our research. Rather than editorialize approximate stories for our personas, we based the descriptions and metadata of each persona on the most common, real tropes we found in our research data.
+      We created a set of personas to represent the most common findings from our research. Rather than editorialize approximate stories for our personas, we based the descriptions and metadata of each persona on the most common, real tropes we found in our data.
     </p>
-
     <div class="work-body-image-grid">
       <app-image-viewer
         [images]="personaImages"
@@ -240,39 +217,35 @@
         description="A gallery of early sketches from design brainstorms">
       </app-image-viewer>
     </div>
-
     <p>
-      With a more codified understanding of our diverse users, we began to design simple, sketch-based concepts for our early solutions. I developed three sketches that each explored ways to add storage at a minimal cost, using commonly available materials.
+      We began to design simple, sketched concepts for solutions. I developed three sketches that each explored ways to add storage at a minimal cost, using commonly available materials.
     </p>
-
     <ul class="work-body-list">
       <li>
-        Use cheap, <a class="work-body-link" target="_blank" href="https://www.dropbox.com/s/rixg5vungtf8x0v/sketch-1.jpg?dl=0">high-volume plastic footlockers</a> as a foundation for a larger array of storage.
+        Use cheap, high-volume plastic footlockers as a foundation for a larger array of storage.
       </li>
       <li>
-        Work with the city to <a class="work-body-link" target="_blank" href="https://www.dropbox.com/s/tlkt7ne217vgkvg/sketch-2.jpg?dl=0">reappropriate large recycling containers</a> to be used as lockers.
+        Work with the city to reappropriate large recycling containers to be used as lockers.
       </li>
       <li>
-        Finally, taking the idea of the mixed materials found around Nickelsville, create <a class="work-body-link" target="_blank" href="https://www.dropbox.com/s/a4irrwtd3mrstxm/sketch-3.jpg?dl=0">a library of "component-based" storage solutions</a> that users can browse to create a storage solution from the materials they have on hand.
+        Finally, taking my idea from the field visit to Nickelsville, create a library of "component-based" storage solutions that users can browse to create a storage solution from the materials they have on hand.
       </li>
     </ul>
+  </section>
 
+  <section class="work-section">
     <h2 class="work-body-h2">
       Iterating on a Single Design
     </h2>
-
     <p>
-      As we met as a team and discussed our sketches, we decided to pursue the modular, component-based solution shown above. We liked the idea of a library that users could browse to find different structures they could build with any range of available materials. It aligned with our survey findings regarding the changing needs of scale, features, and cost that our users wanted. It also had a clear basis in the materials we saw in our field visit.
+      As we met as a team and discussed our sketches, we decided to pursue the modular, component-based solution described above. We liked the idea of a library that users could browse to find different structures they could build with any range of available materials. It aligned with our findings regarding the changing needs of scale, features, and cost that our users wanted. It also had a clear basis in the lived experience we learned about from our field visit.
     </p>
-
     <p>
       With a solution in mind, we had a lot of work to do to iterate and expand on the design. Over the next two weeks, we explored implementation, prototypes, and a representative information architecture for how such a system would work. We presented our design in a comprehensive brief.
     </p>
-
     <p>
       Click below to view or download the brief via Dropbox.
     </p>
-
     <figure class="work-body-figure">
       <a target="_blank" href="https://www.dropbox.com/s/oygbtc5ecu7goxi/Design%20Specifications.pdf?dl=0">
         <img
@@ -284,11 +257,9 @@
         Our design brief
       </figcaption>
     </figure>
-
     <p>
       This is a detailed report with many different elements. If you'd like to know more, please reach out. Thanks for reading.
     </p>
+  </section>
 
-  </div>
-
-</div>
+</article>
