--- a/src/app/work/work-items/vox-global-motion-design/vox-global-motion-design.component.html
+++ b/src/app/work/work-items/vox-global-motion-design/vox-global-motion-design.component.html
@@ -1,17 +1,15 @@
-<div class="work-entry">
-  <div class="work-intro">
-    <div class="work-header">
+<article class="work-entry">
+
+  <header class="work-header">
+    <section class="work-titling">
       <h1 class="work-title">
         Motion Design and Animation
       </h1>
-
       <div class="work-title-border"></div>
-
       <div class="work-subtitle">
         Running a video and animation practice for VOX Global
       </div>
-    </div>
-
+    </section>
     <ul class="work-tags">
       <li class="work-tag">Creative Strategy</li>
       <li class="work-tag">Client Management</li>
@@ -23,44 +21,35 @@
       <li class="work-tag">Storyboarding</li>
       <li class="work-tag">Animation</li>
     </ul>
-
     <div class="work-description">
       <p>
         From 2012-2015, one of my responsibilities at VOX Global was to run a video practice group for VOX Global. This was much like an agency within the agency - I managed clients and produced complex live action and animated videos for a range of budgets and needs.
       </p>
     </div>
+  </header>
 
-  </div>
-  <div class="work-body">
-
+  <section class="work-section">
     <h2 class="work-body-h2">
       Video Portfolio
     </h2>
-
     <p>
       These pieces were created using Adobe Photoshop, Illustrator, After Effects, and Maxon Cinema 4d Studio.
     </p>
-
     <h3 class="work-body-h3">
       AT&T People Planet Possibilities
     </h3>
-
-    <div class="vimeo-embed" style="padding:56.25% 0 0 0;position:relative;">
+    <div class="work-video-embed" style="padding:56.25% 0 0 0;position:relative;">
       <iframe src="https://player.vimeo.com/video/118919919?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     </div>
-
     <h3 class="work-body-h3">
       Lumina Foundation Financial Aid
     </h3>
-
-    <div class="vimeo-embed" style="padding:56.25% 0 0 0;position:relative;">
+    <div class="work-video-embed" style="padding:56.25% 0 0 0;position:relative;">
       <iframe src="https://player.vimeo.com/video/112713629?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     </div>
-
     <p>
       You can find more work from my video portfolio online at <a class="work-body-link" target="_blank" href="https://vimeo.com/petergcutler">vimeo.com/petergcutler</a>.
     </p>
+  </section>
 
-  </div>
-
-</div>
+</article>
