--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -22,7 +22,7 @@ $fa-font-path : '~@fortawesome/fontawesome-free/webfonts';
 @import './nav';
 @import './header-footer';
 @import './image-viewer';
-@import './work-intro';
+@import './work-header';
 @import './work-entry';
 
 // Pages
