--- a/src/app/work/work-items/vox-global-att-csr/vox-global-att-csr.component.html
+++ b/src/app/work/work-items/vox-global-att-csr/vox-global-att-csr.component.html
@@ -1,17 +1,15 @@
-<div class="work-entry">
-  <div class="work-intro">
-    <div class="work-header">
+<article class="work-entry">
+
+  <header class="work-header">
+    <section class="work-titling">
       <h1 class="work-title">
         Redesigning AT&T CSR's Brand & Website
       </h1>
-
       <div class="work-title-border"></div>
-
       <div class="work-subtitle">
         Revamping the way AT&T presents their brand and uses storytelling to share their corporate & social responsibility campaigns
       </div>
-    </div>
-
+    </section>
     <ul class="work-tags">
       <li class="work-tag">Creative Strategy</li>
       <li class="work-tag">Client Management</li>
@@ -20,24 +18,23 @@
       <li class="work-tag">Creative Direction</li>
       <li class="work-tag">Web Design</li>
     </ul>
-
     <div class="work-description">
       <p>
         From 2014-2015, I worked with AT&T to redesign their CSR brand and reconsider the way they use blogging and social media to share their stories. This was a project that I helped lead with our creative and engineering directors.
       </p>
     </div>
+  </header>
 
-  </div>
-  <div class="work-body">
-
+  <section class="work-section">
     <h2 class="work-body-h2">
       Stakeholder Interviews
     </h2>
-
     <p>
       The initiative emerged in collaboration with our client stakeholders at AT&T. They were internally reviewing their CSR brand and direction. Over the past four years, we had helped them become one of the most revered CSR brands in the Fortune 100. They wanted to capitalize on that success, and we collaborated with them to revamp their CSR identity.
     </p>
+    <p>
+      This case study is under construction. More coming soon!
+    </p>
+  </section>
 
-  </div>
-
-</div>
+</article>
