--- a/src/app/work/work-items/vox-global-brand-redesign/vox-global-brand-redesign.component.html
+++ b/src/app/work/work-items/vox-global-brand-redesign/vox-global-brand-redesign.component.html
@@ -1,17 +1,15 @@
-<div class="work-entry">
-  <div class="work-intro">
-    <div class="work-header">
+<article class="work-entry">
+
+  <header class="work-header">
+    <section class="work-titling">
       <h1 class="work-title">
         Internal Rebrand for an Ad Agency
       </h1>
-
       <div class="work-title-border"></div>
-
       <div class="work-subtitle">
         Working with internal stakeholders to research and redesign VOX Global's brand and web presence
       </div>
-    </div>
-
+    </section>
     <ul class="work-tags">
       <li class="work-tag">Branding</li>
       <li class="work-tag">Semi-structured Interviews</li>
@@ -19,24 +17,20 @@
       <li class="work-tag">Language & Tone</li>
       <li class="work-tag">Visual Design</li>
     </ul>
-
     <div class="work-description">
       <p>
         Over the course of 2015, I helped lead an effort to rebrand VOX Global &mdash; a DC-based communications firm &mdash; updating the language, architecture, visual design, and web presence the company used to present itself.
       </p>
     </div>
+  </header>
 
-  </div>
-  <div class="work-body">
-
+  <section class="work-section">
     <h2 class="work-body-h2">
       Research & Discovery
     </h2>
-
     <p>
       From the start of 2012 to the end of 2015, I worked closely with VOX Global's creative director to manage to the brand of the agency. After many years, we knew it was time for a redesign. We spent what time we had away from clients researching and redesigning our identity.
     </p>
-
     <div class="work-body-image-grid">
       <app-image-viewer
         path="../assets/images/work/vox-global-brand-redesign/original-1.png"
@@ -49,19 +43,18 @@
         [borderOn]="true">
       </app-image-viewer>
     </div>
+  </section>
 
+  <section class="work-section">
     <h3 class="work-body-h3">
       Content Audit & Competitive Analysis
     </h3>
-
     <p>
       I had read <a class="work-body-link" target="_blank" href="https://www.contentstrategy.com/content-strategy-for-the-web">Kristina Halvorson's Content Strategy for the Web</a> in 2011 and leaned on this book as we started the project. We began by thoroughly auditing our own web content and information architecture. We also conducted a competitive analysis of other D.C. firms.
     </p>
-
     <p>
       Some of our key findings:
     </p>
-
     <ul class="work-body-list">
       <li>
         Our visual design was dated by emerging web trends &mdash; this included all of our branded content: web and print design, logo, marketing materials
@@ -73,15 +66,15 @@
         Our language was inconsistent, jargon-laden, and inaccessible by modern web-writing standards
       </li>
     </ul>
+  </section>
 
+  <section class="work-section">
     <h3 class="work-body-h3">
       Stakeholder Interviews & Focus Groups
     </h3>
-
     <p>
       Throughout the process, we established and navigated a complex, opinionated internal stakeholder review. We first created an internal review committee, including our company's CEO, COO, and many of the managing partners. This group included many brilliant strategists and writers with many conflicting opinions. We met regularly to brainstorm and collaborate around the foundational content that informed our decision-making process. We learned many lessons along the way.
     </p>
-
     <ul class="work-body-list">
       <li>
         Involve critical stakeholders immediately. Including our CEO in our meetings was the most important step to staying on schedule.
@@ -93,27 +86,24 @@
         Establish a tone of voice collaboratively. Our users (the company's executive leadership) trusted us to lead the visual redesign with minimal input. But when it comes to writing and tone, everyone wants their own identity to shine through. We had to ensure a lasting buy-in across our updated brand language.
       </li>
     </ul>
+  </section>
 
+  <section class="work-section">
     <h2 class="work-body-h2">
       Iterative Design
     </h2>
-
     <p>
       Using our meetings as a jumping off point, we began an iterative design process to update our language, visual, and web-design.
     </p>
-
     <h3 class="work-body-h3">
       Language & Tone
     </h3>
-
     <p>
       We felt that our language and tone was the foundation of our rebrand, so we began with addressing the way we spoke about ourselves.
     </p>
-
     <p>
       As we considered our tone, we found we had a few objectives:
     </p>
-
     <ul class="work-body-list">
       <li>
         Avoid jargon. Move away from <a class="work-body-link" target="_blank" href="https://en.wikipedia.org/wiki/List_of_buzzwords">corporate buzzwords</a> towards <a class="work-body-link" target="_blank" href="https://en.wikipedia.org/wiki/List_of_plain_English_words_and_phrases">plain English</a>. Side note: I've always loved that Wikipedia aggregates these!
@@ -125,19 +115,15 @@
         Collaborating with another executive leader and my creative director, I wrote many different possible tones for our executive leadership to consider. We used these linguistic "mood boards" to select a common language and tone description.
       </li>
     </ul>
-
     <h3 class="work-body-h3">
       Design
     </h3>
-
     <p>
       With an updated language & tone in mind, we began the process of overhauling our visual design holistically. We wanted the simplicity of our tone to extend to our visual representation.
     </p>
-
     <p>
       You can see the updated brand live at <a class="work-body-link" target="_blank" href="http://voxglobal.com/">voxglobal.com</a>.
     </p>
+  </section>
 
-  </div>
-
-</div>
+</article>
