--- a/src/scss/_image-viewer.scss
+++ b/src/scss/_image-viewer.scss
@@ -1,7 +1,3 @@
-.work-body-figure {
-  margin: 1.4em 0;
-}
-
 .work-body-image {
   max-width: 100%;
   height: auto;
@@ -46,6 +42,31 @@
   max-width: 90%;
   height: auto;
   }
+
+  .gallery-info {
+    display: none;
+
+    @include respond-to('smallish') {
+      display: block;
+    }
+  }
+
+  .gallery-prompt {
+    display: none;
+
+    @include respond-to('largal') {
+      display: inline;
+    }
+  }
+
+  .spacer {
+    display: none;
+
+    @include respond-to('largal') {
+      padding: 0 0.33em;
+      display: inline;
+    }
+  }
 }
 
 .gallery-info {
@@ -75,7 +96,7 @@
 .gallery-prompt {
   display: none;
 
-  @include respond-to('medium') {
+  @include respond-to('smallish') {
     display: inline;
   }
 }
@@ -83,7 +104,7 @@
 .spacer {
   display: none;
 
-  @include respond-to('medium') {
+  @include respond-to('smallish') {
     padding: 0 0.33em;
     display: inline;
   }
